# portfolio

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.py  constraints.txt  data_fetcher.py  email_sender.py  main.py  news_scraper.py  portfolio_config.example.json  portfolio_manager.py  pyproject.toml  requirements-dev.txt  requirements.txt  risk_analyzer.py  risk_visualization.py  setup.py  test_newsintegration.py
.github/workflows/: ci.yml
docs/: images.md
scripts/: update_pins.ps1
tests/: README.md  conftest.py  test_integration.py  test_portfolio_manager.py  test_risk_analyzer.py
