[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-automation"
version = "1.0.0"
description = "Automated portfolio management with risk, sentiment, factor and stress analytics"
readme = "README.md"
authors = [
  {name = "K.C. Megh", email = "kc.megh2048@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["portfolio","finance","risk","automation","sentiment","stress","factor","var"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Office/Business :: Financial :: Investment",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent"
]
dependencies = [
  "yfinance>=0.2.25,<0.3",
  "pandas>=2.0.0,<3.0",
  "numpy>=1.24.0,<3.0",
  "requests>=2.31.0,<3.0",
  "beautifulsoup4>=4.12.0,<5.0",
  "schedule>=1.2.0,<2.0",
  "textblob>=0.17.1,<0.20",
  "scipy>=1.11.0,<2.0",
  "lxml>=4.9.0,<7.0",
  "python-dateutil>=2.8.0,<3.0",
  "python-dotenv>=1.0.0,<2.0",
  "matplotlib>=3.5.0,<4.0"
]

# Keep in sync with requirements.txt; install pins managed via constraints file for reproducibility
[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=4.0.0,<5.0.0",
  "black>=24.0.0,<25.0.0",
  "flake8>=7.0.0,<8.0.0",
  "mypy>=1.8.0,<2.0.0",
  "isort>=5.13.0,<6.0.0",
  "pre-commit>=3.6.0,<4.0.0",
  "pip-tools>=7.4.0,<8.0.0",
]
security = [
  "bandit>=1.7.0,<2.0.0",
  "safety>=3.0.0,<4.0.0",
]
docs = [
  "sphinx>=7.0.0,<8.0.0",
  "sphinx-rtd-theme>=2.0.0,<3.0.0",
]
all = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=4.0.0,<5.0.0",
  "black>=24.0.0,<25.0.0",
  "flake8>=7.0.0,<8.0.0",
  "mypy>=1.8.0,<2.0.0",
  "isort>=5.13.0,<6.0.0",
  "pre-commit>=3.6.0,<4.0.0",
  "bandit>=1.7.0,<2.0.0",
  "safety>=3.0.0,<4.0.0",
  "sphinx>=7.0.0,<8.0.0",
  "sphinx-rtd-theme>=2.0.0,<3.0.0",
  "pip-tools>=7.4.0,<8.0.0",
]

[project.urls]
Homepage = "https://github.com/meghkc/portfolio"
Source = "https://github.com/meghkc/portfolio"
Documentation = "https://github.com/meghkc/portfolio#readme"
Changelog = "https://github.com/meghkc/portfolio/blob/main/CHANGELOG.md"
Security = "https://github.com/meghkc/portfolio/blob/main/SECURITY.md"
Issues = "https://github.com/meghkc/portfolio/issues"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203","W503"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"

[tool.pytest.ini_options]
addopts = "-q"

[tool.bandit]
targets = ["."]
exclude = ["tests"]

[tool.coverage.run]
branch = true
source = ["."]

# Explicit module list so setuptools can build a wheel from flat layout
[tool.setuptools]
py-modules = [
  "config",
  "data_fetcher",
  "email_sender",
  "news_scraper",
  "portfolio_manager",
  "risk_analyzer",
  "risk_visualization",
  "main"
]
